--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
     "recorder-js": "^1.0.7",
+    "redux": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
     "socket.io-client": "^4.7.5",
