login and blacklist

--- a/api/.env
+++ b/api/.env
@@ -1,7 +1,7 @@
 DB_USER=postgres
 DB_PASSWORD=wemadeit
 DB_HOST=localhost
-JWT_SECRET= 4r$B36lT/K0M
+JWT_SECRET= 4r$B36lT/K0N
 CLOUDINARY_CLOUD_NAME= dwjlycsle 
 CLOUDINARY_API_KEY= 956779417367449 
 CLOUDINARY_API_SECRET= 6VKdUlLDk067P898tmw0rpIVce0
